--- a/apps/sf2022/package.json
+++ b/apps/sf2022/package.json
@@ -7,6 +7,8 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@react-three/fiber": "^7.0.17",
+    "base": "workspace:packages/base",
     "framer-motion": "^4.1.17",
     "lodash": "^4.17.21",
     "react": "^17.0.0",
@@ -14,12 +16,14 @@
     "react-router": "^5.2.1",
     "react-router-dom": "^5.3.0",
     "sass": "^1.42.1",
-    "shaders": "workspace:packages/shaders",
+    "three": "^0.133.1",
+    "vite-plugin-glsl": "^0.0.4",
     "vite-plugin-windicss": "^1.4.9",
     "windicss": "^3.1.9"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.175",
+    "@types/node": "^16.11.6",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router": "^5.1.17",
