--- a/apps/sf2022/package.json
+++ b/apps/sf2022/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^5.3.0",
     "sass": "^1.42.1",
     "three": "^0.133.1",
+    "use-context-selector": "^1.3.9",
     "vite-plugin-glsl": "^0.0.4",
     "vite-plugin-windicss": "^1.4.9",
     "windicss": "^3.1.9"
