--- a/packages/base/package.json
+++ b/packages/base/package.json
@@ -4,16 +4,20 @@
   "main": "src/index.ts",
   "peerDependencies": {
     "@react-three/fiber": "^7.0.9",
+    "framer-motion": "^5.0.2",
     "react": "^17.0.2",
-    "three": "^0.133.1"
+    "three": "^0.133.1",
+    "use-context-selector": "^1.3.9"
   },
   "devDependencies": {
     "@react-three/fiber": "^7.0.9",
     "@types/react": "^17.0.27",
     "@types/react-dom": "^17.0.9",
     "@types/three": "^0.132.2",
+    "framer-motion": "^5.0.2",
     "react": "^17.0.2",
     "three": "^0.133.1",
-    "typescript": "^4.4.3"
+    "typescript": "^4.4.3",
+    "use-context-selector": "^1.3.9"
   }
 }
