--- a/packages/base/package.json
+++ b/packages/base/package.json
@@ -9,7 +9,7 @@
     "three": "^0.133.1",
     "use-context-selector": "^1.3.9"
   },
-  "devDependencies": {
+  "dependencies": {
     "@react-three/fiber": "^7.0.9",
     "@types/react": "^17.0.27",
     "@types/react-dom": "^17.0.9",
