--- a/apps/wedding/package.json
+++ b/apps/wedding/package.json
@@ -8,13 +8,18 @@
   },
   "dependencies": {
     "@react-three/fiber": "^7.0.17",
+    "axios": "^0.24.0",
     "base": "workspace:packages/base",
+    "firebase": "^9.6.1",
+    "immer": "^9.0.7",
     "lodash": "^4.17.21",
     "react": "^17.0.0",
+    "react-async-hook": "^4.0.0",
     "react-dom": "^17.0.0",
     "sass": "^1.42.1",
     "three": "^0.133.1",
     "use-context-selector": "^1.3.9",
+    "use-immer": "^0.6.0",
     "vite-plugin-glsl": "^0.0.4",
     "vite-plugin-windicss": "^1.4.9",
     "windicss": "^3.1.9"
