--- a/apps/wedding/package.json
+++ b/apps/wedding/package.json
@@ -22,6 +22,7 @@
     "three": "^0.133.1",
     "use-context-selector": "^1.3.9",
     "use-immer": "^0.6.0",
+    "use-local-storage": "^2.2.5",
     "vite-plugin-glsl": "^0.0.4",
     "vite-plugin-windicss": "^1.4.9",
     "windicss": "^3.1.9"
