--- a/apps/sf2022/package.json
+++ b/apps/sf2022/package.json
@@ -11,6 +11,7 @@
     "base": "workspace:packages/base",
     "lodash": "^4.17.21",
     "react": "^17.0.0",
+    "react-async-hook": "^4.0.0",
     "react-dom": "^17.0.0",
     "react-router": "^6.0.2",
     "react-router-dom": "^6.0.2",
