--- a/apps/wedding/package.json
+++ b/apps/wedding/package.json
@@ -7,6 +7,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.4",
     "@googlemaps/js-api-loader": "^1.13.1",
     "@react-three/fiber": "^7.0.17",
     "axios": "^0.24.0",
@@ -20,6 +21,7 @@
     "react": "^17.0.0",
     "react-async-hook": "^4.0.0",
     "react-dom": "^17.0.0",
+    "react-lottie": "^1.2.3",
     "react-router": "^6.0.2",
     "react-router-dom": "^6.0.2",
     "sass": "^1.42.1",
