--- a/apps/sf2022/package.json
+++ b/apps/sf2022/package.json
@@ -7,18 +7,20 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "@react-three/drei": "^9.1.2",
-    "@react-three/fiber": "^7.0.17",
+    "@react-three/drei": "^9.5.4",
+    "@react-three/fiber": "^8.0.12",
     "base": "workspace:packages/base",
+    "framer-motion": "^6.3.2",
     "lodash": "^4.17.21",
-    "react": "^17.0.0",
+    "react": "^18.1.0",
     "react-async-hook": "^4.0.0",
-    "react-dom": "^17.0.0",
+    "react-dom": "^18.1.0",
     "react-router": "^6.0.2",
     "react-router-dom": "^6.0.2",
+    "react-spring": "^9.4.4",
     "sass": "^1.42.1",
-    "three": "^0.133.1",
-    "use-context-selector": "^1.3.9",
+    "three": "^0.139.2",
+    "use-context-selector": "^1.3.10",
     "vite-plugin-glsl": "^0.0.4",
     "vite-plugin-windicss": "^1.4.9",
     "windicss": "^3.1.9"
@@ -26,8 +28,8 @@
   "devDependencies": {
     "@types/lodash": "^4.14.175",
     "@types/node": "^16.11.6",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
+    "@types/react": "^18.0.8",
+    "@types/react-dom": "^18.0.0",
     "@types/react-router": "^5.1.17",
     "@types/react-router-dom": "^5.3.2",
     "@vitejs/plugin-react": "^1.0.0",
