--- a/apps/sf2022/package.json
+++ b/apps/sf2022/package.json
@@ -7,9 +7,11 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@react-spring/three": "^9.4.4",
     "@react-three/drei": "^9.5.4",
     "@react-three/fiber": "^8.0.12",
     "base": "workspace:packages/base",
+    "dom-to-image": "^2.6.0",
     "framer-motion": "^6.3.2",
     "lodash": "^4.17.21",
     "react": "^18.1.0",
@@ -22,6 +24,7 @@
     "three": "^0.139.2",
     "use-context-selector": "^1.3.10",
     "vite-plugin-glsl": "^0.0.4",
+    "vite-plugin-svgr": "^2.0.0",
     "vite-plugin-windicss": "^1.4.9",
     "windicss": "^3.1.9"
   },
